--- a/task-a/style.css
+++ b/task-a/style.css
@@ -1,4 +1,13 @@
-<body style`="background-color:powderblue;">
-<hi style="color:blue;"></hi>
-<h1 style="font-size:300%;"></h1>
-<p style="color:red;"></p>
+
+body {
+    background-color: blanchedalmond;
+}
+
+h1{
+    color: aqua;
+    font-size: large;
+}
+
+p {
+    color: black;
+}
