--- a/task-a/style.css
+++ b/task-a/style.css
@@ -1,4 +1,3 @@
-css 
 /*
 Author: Mona Määttänen
 Date: 2025-09-18
@@ -15,4 +14,9 @@ h1{
 
 p {
     color: black;
+}
+
+h2{
+    color: blue;
+    font-size: large;
 }
