--- a/task-b/style.css
+++ b/task-b/style.css
@@ -1,6 +1,38 @@
-css
 /*
 Author: Mona Määttänen
 Date: 2025-09-23
 */
 
+body {
+    background-color: antiquewhite;
+    color: #000; 
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    color: blue;
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+
+p {
+    color: blue;
+}
+
+ul, ol {
+    color: blue;
+}
+
+li {
+    color: blue;
+}
+
+a {
+    color: blue;
+}
+
+h2 {
+    color: blue;
+    font-size: 1.25rem;
+}
