--- a/task-b/style.css
+++ b/task-b/style.css
@@ -6,33 +6,33 @@ Date: 2025-09-23
 body {
     background-color: antiquewhite;
     color: #000; 
-    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: blue;
-    font-size: 1.5rem;
-    margin: 0.5rem 0;
+    color: rgb(0, 119, 255);
+    font-size: medium;
 }
 
 p {
-    color: blue;
+    color: rgb(0, 119, 255);
 }
 
-ul, ol {
-    color: blue;
-}
-
-li {
-    color: blue;
+ul {
+    color: rgb(0, 174, 255);
 }
 
 a {
-    color: blue;
+    color: rgb(255, 0, 200);
 }
 
 h2 {
-    color: blue;
-    font-size: 1.25rem;
+    color: rgb(140, 0, 255);
+    font-size: medium;
 }
+
+ol {
+    color: rgb(162, 0, 255);
+}
+
+
