--- a/task-b/style.css
+++ b/task-b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
     color: rgb(0, 119, 255);
-    font-size: medium;
+    font-size: large;
 }
 
 p {
@@ -20,6 +20,8 @@ p {
 
 ul {
     color: rgb(0, 174, 255);
+    list-style-type: square;
+    padding-left: 20px;
 }
 
 a {
@@ -28,11 +30,13 @@ a {
 
 h2 {
     color: rgb(140, 0, 255);
-    font-size: medium;
+    font-size: large;
 }
 
 ol {
     color: rgb(162, 0, 255);
+    list-style-type: decimal;
+    padding-left: 20px;
 }
 
 
